# grokbook

./: .gitignore  CLAUDE.md  LICENSE  README.md  kernel_picker.md  progress.md  pyproject.toml
.github/workflows/: publish.yml
app/: ansi.py  api.py  db.py  handlers.py  ipynb.py  kernel.py  openai.py  state.py  views.py
app/static/js/: app.js  codemirror.js
grokbook/: __main__.py  _server.py  api.py  cli.py  db.py  envs.py  handlers.py  ipynb.py  kernel.py  mcp_server.py  mojo_lsp.py  state.py  views.py  welcome.py
grokbook/static/js/: app.js  codemirror.js
