[project]
name = "grokbook"
version = "0.1.3"
description = "Interactive notebook server for learning computer science"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [{ name = "Marco Jeffrey Pansa", email = "marco-jeffrey@users.noreply.github.com" }]
keywords = ["notebook", "jupyter", "ipython", "datastar", "sse", "reactive", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Framework :: Jupyter",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
]
dependencies = [
    "stario==2.3.0",
    "jupyter-client>=8.0.0",
    "ipykernel>=6.25.0",
    "aiosqlite>=0.20.0",
    "watchfiles>=1.1.1",
    "markdown-it-py[linkify,plugins]>=4.0.0",
    "fastmcp>=3.1.1",
    "httpx>=0.28.1",
    "tqdm>=4.67.3",
    "typer>=0.15.0",
]

[project.scripts]
grokbook = "grokbook.cli:app"

[project.urls]
Homepage = "https://github.com/marco-jeffrey/grokbook"
Repository = "https://github.com/marco-jeffrey/grokbook"
Issues = "https://github.com/marco-jeffrey/grokbook/issues"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["grokbook*"]

[tool.setuptools.package-data]
grokbook = ["static/**/*"]
